@@ -907,6 +907,20 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA iP3300 */
+    "PIXMA iP3300", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    /* 8, */
+    &canon_PIXMA_iP3500_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I|CANON_CAP_P,0,control_cmd_PIXMA_iP2700,  /*features */
+    &canon_MULTIPASS_MP520_modelist,
+    &canon_PIXMA_iP3300_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA iP3500 - like MP520 */
     "PIXMA iP3500", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
